fixed colors and people alignment

--- a/flask_app/static/css/design.css
+++ b/flask_app/static/css/design.css
@@ -167,3 +167,14 @@ footer {
         color: #333;
     }
 }
+
+/* panel coloring */
+.panel-default > .panel-heading {
+    color: #333;
+    background-color: #E3EBF3;
+    border-color: #E3EBF3;
+}
+
+.panel {
+    border-color: #E3EBF3;
+}
